css/style.css
:root {
	--malone-dark-blue: rgb(26, 65, 104);
	--malone-light-blue: rgb(83, 77, 153);
	--malone-background-color: rgb(252, 241, 235);
	--nav-height: 90px;
	--week-nav-height: 40px;
	--safe-area-inset-bottom: env(safe-area-inset-bottom, 0px);
	--total-bottom-height: calc(
		var(--nav-height) + (var(--week-nav-height) * var(--week-nav-visible)) +
			var(--safe-area-inset-bottom)
	);

	/* section colors */
	--section-1-color: #003388;
	--section-2-color: #7bdcb5;
	--section-3-color: #0693e3;
	--section-4-color: #9b51e0;
}

body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	background-color: var(--malone-background-color);
}

.fullscreen {
	height: 100%;
	margin: 0px;
	padding: 0px;
	width: 100%;
}

.container {
	width: 100%;
	left: 0;
	right: 0;
	padding: 0;
	max-width: 100%;
}

.floatingTab {
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	border-radius: 0;
	padding-bottom: var(--safe-area-inset-bottom);
	background-color: var(--malone-light-blue);
	height: var(--nav-height);
}
:root {
	--tab-icon-width: 20vw;
}

.nav-link {
	color: var(--malone-dark-blue);
	text-align: center;
	width: var(--tab-icon-width);
}

.nav-link * {
	display: block;
}

.tab-content .tab-pane {
	margin-bottom: 150px;
}

img {
	max-width: 100%;
}

nav {
	z-index: 100;
}

.nav-pills .nav-item {
	background-color: var(--malone-light-blue);
	color: white;
	padding-top: 15px;
	padding-bottom: 50px;
}

.nav-pills .nav-item.active {
	background-color: var(--malone-background-color);
	color: var(--malone-dark-blue);
}

.module-grid {
	padding: 20px;
}

.week-navigation,
.module-navigation {
	position: fixed;
	bottom: calc(var(--nav-height) - 1px);
	left: 0;
	right: 0;
	background-color: var(--malone-light-blue);
	display: flex;
	justify-content: space-between;
	align-items: center;
	z-index: 101;
	height: var(--week-nav-height);
}

.week-navigation button,
.module-navigation button {
	background-color: var(--malone-light-blue);
	color: white;
	border: none;
	flex: 1;
	height: 100%;
	border-radius: 0;
	transition: all 0.3s ease;
	padding: 0 10px;
}

.week-navigation button:hover,
.module-navigation button:hover {
	background-color: var(--malone-light-blue);
	color: var(--malone-background-color);
}

.week-navigation span,
.module-navigation span {
	background-color: var(--malone-light-blue);
	color: var(--malone-background-color);
	padding: 10px 20px;
	flex: 1;
	text-align: center;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
}

.module-navigation {
	display: none;
	height: 5vh;
}

.icon {
	display: block;
	text-align: center;
}

.big-nav-icon {
	font-size: 28px;
}

.small-nav-label {
	font-size: 12px;
	padding-top: 1px;
}

h1 {
	background-color: var(--malone-light-blue);
	color: white;
	padding: 10px;
	width: 100%;
	position: sticky;
	top: 0;
	z-index: 10;
	margin: 0px;
}

h2 {
	background-color: var(--malone-light-blue);
	color: white;
	padding: 10px;
	width: 100%;
	position: sticky;
	top: 3.125rem; /* Using rem for better responsiveness */
	z-index: 9;
	font-style: italic;
}

.header-colors {
	h3,
	h4,
	h5,
	h6 {
		color: white;
		padding: 10px;
		width: 100%;
		position: sticky;
		top: 3.125rem; /* Using rem for better responsiveness */
		z-index: 9;
		font-style: italic;
	}
	h3 {
		background-color: var(--section-1-color);
		font-size: 2rem; /* Same size as h2 */
	}
	h4 {
		background-color: var(--section-2-color);
		font-size: 2rem; /* Same size as h2 */
	}
	h5 {
		background-color: var(--section-3-color);
		font-size: 2rem; /* Same size as h2 */
	}
	h6 {
		background-color: var(--section-4-color);
		font-size: 2rem; /* Same size as h2 */
	}
}

.form-label {
	font-weight: bold;
}

.settings-controls {
	margin: 10px;
}

p,
.card,
.search-box {
	margin: 10px;
}

.card-title,
.card-text {
	margin: 0px;
}

.btn {
	background-color: var(--malone-light-blue);
	color: var(--malone-background-color);
}

.btn:hover {
	background-color: var(--malone-light-blue);
	color: var(--malone-background-color);
}

